Update 3. ATutor Authentication Bypass and RCE.md

--- a/2/3. ATutor Authentication Bypass and RCE.md
+++ b/2/3. ATutor Authentication Bypass and RCE.md
@@ -1,5 +1,10 @@
 
 ## vuln discovery
 ```bash
-grep -rnw /folder/subfolder -e 'regex here' --color
+grep -rnw /var/www/folder/subfolder -e 'regex here' --color
+```
+
+Yes, if you have access to the entire source code you might look for file which are set to public and somehow display how their input sanitize work. 
+```php
+$_user_location = 'public';
 ```
