Update 3. ATutor Authentication Bypass and RCE.md

--- a/2/3. ATutor Authentication Bypass and RCE.md
+++ b/2/3. ATutor Authentication Bypass and RCE.md
@@ -1,5 +1,6 @@
 
 ## vuln discovery
+Search a subfolder for specific regex tied to some vulnerabilities.
 ```bash
 grep -rnw /var/www/folder/subfolder -e 'regex here' --color
 ```
